@@ -11,6 +11,7 @@ changes relative to sbcl-2.2.3:
   * optimization: inlined functions enclosed in local macro definitions no
     longer save their entire lexical environment, reducing unnecessary
     memory retention.
+  * optimization: faster (< integer fixnum) comparisons (ARM64 and x86-64).
 
 changes in sbcl-2.2.3 relative to sbcl-2.2.2:
   * minor incompatible change: SB-THREAD:MUTEX-OWNER may return :THREAD-DEAD
